...
                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                </collectionViewFlowLayout>
                                <cells/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="collectionView"/>
                                </userDefinedRuntimeAttributes>
                            </collectionView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="7tl-wE-dZS" firstAttribute="top" secondItem="bRT-FK-XQG" secondAttribute="bottom" id="0WK-t2-uup"/>
...
                        <viewLayoutGuide key="safeArea" id="oXS-ww-znh"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="home_unselected" selectedImage="home_selected" id="800-3t-ver">
                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
                        <color key="badgeColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="home"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <navigationItem key="navigationItem" title="moças 25% off" id="nNL-lJ-Xj9"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="collectionView" destination="7tl-wE-dZS" id="W8E-OT-DHq"/>
...
