...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="T08-w1-n3K"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="search_unselected" selectedImage="search_selected" id="oF8-ch-Rt4">
                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="search"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <navigationItem key="navigationItem" id="kzg-Rg-U9X"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="EFt-Ky-Sba" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
