...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Jbq-zY-jHz"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="inbox_unselected" selectedImage="inbox_selected" id="Qme-WZ-3Aa">
                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="inbox"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <navigationItem key="navigationItem" id="Cv4-4F-rIS"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mQ6-Bq-j9q" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
