...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Y5f-BH-1VQ"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="perfil_unselected" selectedImage="perfil_selected" id="aw6-Ea-HFo">
                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="profile"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <navigationItem key="navigationItem" id="DOK-1X-LSn"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1zW-si-DxJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
